; ModuleID = '/home/carl/AnghaBench/postgres/src/pl/plpgsql/src/extr_pl_exec.c_plpgsql_xact_cb.c'
source_filename = "/home/carl/AnghaBench/postgres/src/pl/plpgsql/src/extr_pl_exec.c_plpgsql_xact_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@XACT_EVENT_COMMIT = common dso_local global i64 0, align 8
@XACT_EVENT_PREPARE = common dso_local global i64 0, align 8
@simple_econtext_stack = common dso_local global i32* null, align 8
@shared_simple_eval_estate = common dso_local global i32* null, align 8
@XACT_EVENT_ABORT = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @plpgsql_xact_cb(i64 %0, i8* %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i8*, align 8
  store i64 %0, i64* %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load i64, i64* %3, align 8
  %6 = load i64, i64* @XACT_EVENT_COMMIT, align 8
  %7 = icmp eq i64 %5, %6
  br i1 %7, label %12, label %8

8:                                                ; preds = %2
  %9 = load i64, i64* %3, align 8
  %10 = load i64, i64* @XACT_EVENT_PREPARE, align 8
  %11 = icmp eq i64 %9, %10
  br i1 %11, label %12, label %19

12:                                               ; preds = %8, %2
  store i32* null, i32** @simple_econtext_stack, align 8
  %13 = load i32*, i32** @shared_simple_eval_estate, align 8
  %14 = icmp ne i32* %13, null
  br i1 %14, label %15, label %18

15:                                               ; preds = %12
  %16 = load i32*, i32** @shared_simple_eval_estate, align 8
  %17 = call i32 @FreeExecutorState(i32* %16)
  br label %18

18:                                               ; preds = %15, %12
  store i32* null, i32** @shared_simple_eval_estate, align 8
  br label %25

19:                                               ; preds = %8
  %20 = load i64, i64* %3, align 8
  %21 = load i64, i64* @XACT_EVENT_ABORT, align 8
  %22 = icmp eq i64 %20, %21
  br i1 %22, label %23, label %24

23:                                               ; preds = %19
  store i32* null, i32** @simple_econtext_stack, align 8
  store i32* null, i32** @shared_simple_eval_estate, align 8
  br label %24

24:                                               ; preds = %23, %19
  br label %25

25:                                               ; preds = %24, %18
  ret void
}

declare dso_local i32 @FreeExecutorState(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
